Update package that have changed name or are merged with other packages

--- a/config.conf
+++ b/config.conf
@@ -50,14 +50,14 @@ packages=firefox plasma-browser-integration
 packages=v4l-utils
 
 [wacom-tablet]
-packages=xf86-input-wacom kcm-wacomtablet
+packages=xf86-input-wacom wacomtablet
 
 [sound]
 packages=pipewire-pulse pulseaudio-alsa plasma-pa wireplumber
 
 [desktop]
 # Wayland support
-packages=kwayland-integration xorg-xwayland plasma-wayland-session glfw-wayland gst-plugin-pipewire gstreamer-vaapi
+packages=kwayland-integration xorg-xwayland glfw-wayland gst-plugin-pipewire gstreamer-vaapi
 # Qt component to allow applications to make use of the Wayland wl-layer-shell protocol
 packages=layer-shell-qt
 # KDE daemon listening for wall and write messages
@@ -78,7 +78,7 @@ packages=drkonqi
 # Power manager
 packages=powerdevil
 # KDE tools
-packages=kde-cli-tools khotkeys kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
+packages=kde-cli-tools kinfocenter kscreen kwin milou plasma-desktop kcolorchooser
 # Theme
 packages=breeze breeze-gtk plasma-integration kde-gtk-config
 services=sddm
