Add va package as normal package instead of aur package

--- a/config.conf
+++ b/config.conf
@@ -89,8 +89,7 @@ services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
-packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
-aur-packages=libva-nvidia-driver
+packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils libva-nvidia-driver nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
 services=nvidia-persistenced
 
 # [custom-header]
