--- a/config.conf
+++ b/config.conf
@@ -18,7 +18,7 @@ aur-packages=azure-storage-fuse
 services=ldmtool blobfuse2
 
 [networking]
-packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-l2tp
+packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm networkmanager-l2tp strongswan
 aur-packages=networkmanager-fortisslvpn
 services=NetworkManager
 
