Move to new teams package

--- a/config.conf
+++ b/config.conf
@@ -33,7 +33,7 @@ packages=nano vi
 aur-packages=visual-studio-code-bin
 
 [programs]
-aur-packages=teams teamviewer
+aur-packages=teams-for-linux-bin teamviewer
 # wps-office and its optional dependencies.
 aur-packages=libtiff5 wps-office-fonts wps-office-mime wps-office
 packages=libjpeg-turbo
