--- a/config.conf
+++ b/config.conf
@@ -34,6 +34,7 @@ aur-packages=visual-studio-code-bin
 
 [programs]
 aur-packages=teams-for-linux-bin teamviewer
+services=teamviewerd
 # wps-office and its optional dependencies.
 aur-packages=libtiff5 wps-office-fonts wps-office-mime wps-office
 packages=libjpeg-turbo
