Remove nvidia stuff

--- a/config.conf
+++ b/config.conf
@@ -24,7 +24,6 @@ services=NetworkManager
 
 [tools]
 packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector obs-studio
-aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker
 
@@ -99,8 +98,7 @@ services=sddm
 
 [gpu]
 # choices are intel, nvidia, amd (case insensitive)
-packages=nvidia nvidia-utils nvidia-settings lib32-nvidia-utils libva-nvidia-driver nvidia-prime mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
-services=nvidia-persistenced
+packages=mesa lib32-mesa xf86-video-intel vulkan-intel intel-media-driver libva-intel-driver intel-gpu-tools
 
 # [custom-header]
 # packages=
