--- a/filesystem/boot/refind_linux.conf
+++ b/filesystem/boot/refind_linux.conf
@@ -1,3 +1,3 @@
-"Boot with standard options"  "root=<PARTUUID> nvidia-drm.modeset=1 rw initrd=intel-ucode.img initrd=initramfs-linux.img"
-"Boot to single-user mode"    "root=<PARTUUID> nvidia-drm.modeset=1 rw initrd=intel-ucode.img initrd=initramfs-linux.img single"
+"Boot with standard options"  "root=<PARTUUID> rw initrd=intel-ucode.img initrd=initramfs-linux.img"
+"Boot to single-user mode"    "root=<PARTUUID> rw initrd=intel-ucode.img initrd=initramfs-linux.img single"
 "Boot with minimal options"   "ro root=<PARTUUID>"
