Enable firewall service

--- a/config.conf
+++ b/config.conf
@@ -19,7 +19,7 @@ services=ldmtool devmon@<user>
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
-services=NetworkManager
+services=NetworkManager firewalld
 
 [tools]
 packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
