Use KDE ark archiving utility for quick access in a right click menu as well as the command line instead of zip, tar, and unzip

--- a/config.conf
+++ b/config.conf
@@ -22,7 +22,7 @@ packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
 services=NetworkManager firewalld
 
 [tools]
-packages=git man-db tar zip unzip flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
+packages=git man-db flameshot openssh docker docker-compose zsh htop wine wine-mono wine-gecko rebuild-detector
 aur-packages=nvidia-container-toolkit
 groups=docker
 services=docker
@@ -70,7 +70,7 @@ packages=sddm sddm-kcm
 packages=plasma-vault polkit-kde-agent kwallet-pam kleopatra
 aur-packages=pam_autologin
 # File manager
-packages=dolphin dolphin-plugins filelight sweeper
+packages=dolphin dolphin-plugins filelight sweeper ark
 # XDG implementation
 packages=xdg-desktop-portal xdg-desktop-portal-kde
 # Crash handler
