Remove unmaintained udevil package

--- a/config.conf
+++ b/config.conf
@@ -14,8 +14,7 @@ mount-path=/mnt
 
 [filesystem]
 packages=ntfs-3g libldm udisks2 plasma-disks
-aur-packages=udevil
-services=ldmtool devmon@<user>
+services=ldmtool
 
 [networking]
 packages=networkmanager iptables-nft firewalld plasma-firewall plasma-nm
